color contrast corrections

--- a/styles/temples-large.css
+++ b/styles/temples-large.css
@@ -1,9 +1,4 @@
 @media screen and (min-width: 500px) {
-
-    /* body {
-        max-width: 100%;
-    } */
-
     p {
         text-align: center;
     }
@@ -25,7 +20,7 @@
         width: 100%;
         height: 100%; 
         max-width: 1200px;
-        background-color: #6a96dae2;
+        background-color: #2b64d6;
     }
 
     .navigation li {
